# jpy-sync-db-lite

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.cursor/rules/: sdlc-standards.mdc
docs/: README-details.md  USE_CASES.md  plan-2025-09-04-01.md  research-2025-09-04T2126-01.md
examples/: api_improvements_demo.py  basic_usage.py  benchmark_db_engine.py  transactions_and_batch.py
jpy_sync_db_lite/: __init__.py  __main__.py  db_engine.py  db_request.py  errors.py  sql_helper.py
tests/: PERFORMANCE_TESTS.md  README.md  README_OPTIMIZED.md  __init__.py  benchmark_db_engine.py  run_tests.py  test_backup_performance.py  test_db_engine.py  test_db_engine_api_improvements.py  test_db_engine_batch.py  test_db_engine_benchmark_like.py  test_db_engine_core.py  test_db_engine_coverage.py  test_db_engine_edge_cases.py  test_db_engine_performance.py  test_db_engine_sqlite.py  test_db_engine_stress.py  test_sql_helper.py  test_utils.py
